[package]
name = "weaver_cache"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tempdir = "0.3.7"
dirs = "5.0.1"
gix = { version = "0.63.0", default-features = false, features = [
    "comfort",
    "blocking-http-transport-reqwest",
    "max-performance-safe",
    "worktree-mutation",
    "blocking-http-transport-reqwest-rust-tls",
] }

thiserror.workspace = true
serde.workspace = true
miette.workspace = true

