[package]
name = "weaver_cache"
version = "0.9.1"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
weaver_common = { path = "../weaver_common" }

tempdir = "0.3.7"
dirs = "5.0.1"
gix = { version = "0.64.0", default-features = false, features = [
    "comfort",
    "blocking-http-transport-reqwest",
    "max-performance-safe",
    "worktree-mutation",
    "blocking-http-transport-reqwest-rust-tls",
] }
flate2 = "1.0.31"
tar = "0.4.41"
zip = "2.1.5"

thiserror.workspace = true
serde.workspace = true
miette.workspace = true
once_cell.workspace = true
regex.workspace = true
url.workspace = true
ureq.workspace = true

[dev-dependencies]
walkdir.workspace = true
