[package]
name = "weaver_cache"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
weaver_common = { path = "../weaver_common" }

tempdir = "0.3.7"
dirs = "6.0.0"
gix = { version = "0.70.0", default-features = false, features = [
    "comfort",
    "blocking-http-transport-reqwest",
    "max-performance-safe",
    "worktree-mutation",
    "blocking-http-transport-reqwest-rust-tls",
] }
flate2 = "1.1.0"
tar = "0.4.44"
zip = "2.4.2"

thiserror.workspace = true
serde.workspace = true
miette.workspace = true
once_cell.workspace = true
regex.workspace = true
url.workspace = true
ureq.workspace = true

[dev-dependencies]
walkdir.workspace = true
