[package]
name = "weaver_checker"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true


[lints]
workspace = true


[dependencies]

thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Will be replaced by the actual regorus crate once this issue is resolved:
# https://github.com/microsoft/regorus/issues/199
[dependencies.regorus]
git = "https://github.com/lquerel/regorus.git"
rev = "baf979852c051d5828fca2efd803605be74a1171"
default-features = false
features = [
    "arc",
    "base64",
    "base64url",
    "coverage",
    "crypto",
    "deprecated",
    "glob",
    "graph",
    "hex",
    "http",
    "jwt",
    "jsonschema",
    "regex",
    "semver",
    "time",
    "uuid",
    "urlquery",
    "yaml"
]

[dev-dependencies]
# Required for testing