[package]
name = "weaver_checker"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true


[lints]
workspace = true


[dependencies]
weaver_common = { path = "../weaver_common" }

thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

regorus = { version = "0.1.3", default-features = false, features = [
    "arc",
    "base64",
    "base64url",
    "coverage",
    "crypto",
    "deprecated",
    "glob",
    "graph",
    "hex",
    "http",
    "jwt",
    "jsonschema",
    "regex",
    "semver",
    "time",
    "uuid",
    "urlquery",
    "yaml"
]}

[dev-dependencies]
# Required for testing