[package]
name = "weaver_checker"
version = "0.9.1"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true


[lints]
workspace = true


[dependencies]
weaver_common = { path = "../weaver_common" }

thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
globset.workspace = true
miette.workspace = true

regorus = { version = "0.2.4", default-features = false, features = [
    "std",
    "arc",
    "base64",
    "base64url",
    "coverage",
    "crypto",
    "deprecated",
    "glob",
    "graph",
    "hex",
    "http",
    "jwt",
    "jsonschema",
    "regex",
    "semver",
    "time",
    "uuid",
    "urlquery",
    "yaml"
]}

[dev-dependencies]
# Required for testing