[package]
name = "weaver_codegen_test"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[build-dependencies]
weaver_common = { path = "../weaver_common" }
weaver_cache = { path = "../weaver_cache" }
weaver_forge = { path = "../weaver_forge" }
weaver_resolver = { path = "../weaver_resolver" }
weaver_semconv = { path = "../weaver_semconv" }
walkdir.workspace = true

[dependencies]
opentelemetry = { version = "0.22.0", features = ["trace", "metrics", "logs", "otel_unstable"] }
opentelemetry_sdk = { version = "0.22.1", features = ["trace", "metrics", "logs"] }
opentelemetry-stdout = { version = "0.3.0", features = ["trace", "metrics", "logs"] }

[dev-dependencies]
walkdir.workspace = true

