[package]
name = "weaver_common"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
paris = { version = "1.5.15", features = ["macros"] }
serde.workspace = true
serde_json.workspace = true
miette.workspace = true
thiserror.workspace = true
rouille.workspace = true

[dev-dependencies]
ureq.workspace = true

