[package]
name = "weaver_common"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
paris = { version = "1.5.15", features = ["macros"] }
serde.workspace = true
serde_json.workspace = true
miette.workspace = true
thiserror.workspace = true
rouille.workspace = true
regex.workspace = true
once_cell.workspace = true
schemars.workspace = true
ureq.workspace = true
log.workspace = true

tempdir = "0.3.7"
dirs = "6.0.0"
gix = { version = "0.73.0", default-features = false, features = [
    "comfort",
    "blocking-http-transport-reqwest",
    "max-performance-safe",
    "worktree-mutation",
    "blocking-http-transport-reqwest-rust-tls",
] }
flate2 = "1.1.4"
tar = "0.4.43"
zip = "6.0.0"

[dev-dependencies]
ureq.workspace = true
walkdir.workspace = true
