[package]
name = "weaver_common"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
paris = { version = "1.5.15", features = ["macros"] }
serde.workspace = true
serde_json.workspace = true
miette.workspace = true
thiserror.workspace = true
rouille.workspace = true
regex.workspace = true
once_cell.workspace = true
schemars.workspace = true
ureq.workspace = true
log.workspace = true

tempfile.workspace = true
dirs = "6.0.0"
gix = { version = "0.78.0", default-features = false, features = [
    "comfort",
    "blocking-http-transport-reqwest-native-tls",
    "max-performance-safe",
    "worktree-mutation",
] }
# Required for cross-compiling to musl targets (aws-lc-rs in rustls has C23/musl incompatibility)
openssl = { version = "0.10", features = ["vendored"] }
flate2 = "1.1.4"
tar = "0.4.43"
zip = "5.1.1"

[dev-dependencies]
ureq.workspace = true
walkdir.workspace = true
