[package]
name = "weaver_diff"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
similar = "2.5.0"


[lints]
workspace = true

[package.metadata.cargo-machete]
# force cargo machete to ignore the following crates
# remove this section once this crate is integrated into the rest
# of the project
ignored = []
