[package]
name = "weaver_emit"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
weaver_common = { path = "../weaver_common" }
weaver_semconv = { path = "../weaver_semconv" }
weaver_resolved_schema = { path = "../weaver_resolved_schema" }
weaver_forge = { path = "../weaver_forge" }
opentelemetry.workspace = true
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry-stdout = { version = "0.30.0", features = ["trace"] }
tokio = { version = "1.44.2", features = ["full"] }
ordered-float.workspace = true
thiserror.workspace = true
serde.workspace = true
miette.workspace = true

[dev-dependencies]
futures-util = { version = "0.3", default-features = false }

[lints]
workspace = true

[package.metadata.cargo-machete]
# force cargo machete to ignore the following crates
# remove this section once this crate is integrated into the rest
# of the project
ignored = []
