[package]
name = "weaver_forge"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
weaver_diff = { path = "../weaver_diff" }
weaver_common = { path = "../weaver_common" }
weaver_resolver = { path = "../weaver_resolver" }
weaver_resolved_schema = { path = "../weaver_resolved_schema" }
weaver_semconv = { path = "../weaver_semconv" }

minijinja = { version = "2.5.0", features = ["loader", "custom_syntax", "debug", "json", "urlencode", "macros"] }
minijinja-contrib = { version="2.5.0", features = ["pycompat"] }
convert_case = "0.6.0"
jaq-core = "1.5.1"
jaq-std = "1.6.0"
jaq-interpret = "1.5.0"
jaq-parse = "1.0.3"
jaq-syn = "1.6.0"
indexmap = "2.7.0"
regex = "1.11.1"
markdown = "=1.0.0-alpha.21"
textwrap = "0.16.1"

itertools.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
rayon.workspace = true
walkdir.workspace = true
globset.workspace = true
miette.workspace = true
include_dir.workspace = true
schemars.workspace = true
dirs.workspace = true

[dev-dependencies]
opentelemetry.workspace = true
opentelemetry_sdk = { version = "0.27.1", features = ["trace", "metrics", "logs"] }
opentelemetry-stdout = { version = "0.27.0", features = ["trace", "metrics", "logs"] }

