[package]
name = "weaver_infer"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
weaver_common = { path = "../weaver_common" }
weaver_live_check = { path = "../weaver_live_check" }
weaver_semconv = { path = "../weaver_semconv" }

serde.workspace = true
serde_json.workspace = true
convert_case.workspace = true
log.workspace = true

[lints]
workspace = true
