[package]
name = "weaver_live_check"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
weaver_common = { path = "../weaver_common" }
weaver_forge = { path = "../weaver_forge" }
weaver_resolved_schema = { path = "../weaver_resolved_schema" }
weaver_semconv = { path = "../weaver_semconv" }
weaver_checker = { path = "../weaver_checker" }
weaver_config = { path = "../weaver_config" }

thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
miette.workspace = true
schemars.workspace = true
log.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-stdout.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "=3.25.0"
serde_yaml.workspace = true

[lints]
workspace = true

[package.metadata.cargo-machete]
# force cargo machete to ignore the following crates
# remove this section once this crate is integrated into the rest
# of the project
ignored = []
